[package]
name = "aes-gcm-stream"
version = "0.1.1"
edition = "2021"
authors = ["Hatter Jiang"]
repository = "https://git.hatter.ink/hatter/aes-gcm-stream"
description = "AES GCM stream encrypt and decrypt library, supports AES128/192/256 bit keys"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "aes", "gcm", "stream"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.8.3", features = ["zeroize"] }
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }

[dev-dependencies]
hex = "0.4.3"
aes-gcm = { version = "0.10.2", features = ["zeroize"] }
benchmark-simple = "0.1.8"
